--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories(include)
 
-add_executable(CameraCalibration src/camera_calibration.cpp)
-add_executable(VoxelCarving src/detect_markers.cpp)
+# add_executable(CameraCalibration src/camera_calibration.cpp)
+add_executable(VoxelCarving src/voxel_carving.cpp src/detect_markers.cpp src/marching_cubes.cpp)
+# add_executable(MarchingCubes src/marching_cubes.cpp)
 
-target_link_libraries(CameraCalibration ${OpenCV_LIBS})
-target_link_libraries(VoxelCarving ${OpenCV_LIBS})
+# target_link_libraries(CameraCalibration ${OpenCV_LIBS})
+target_link_libraries(VoxelCarving ${OpenCV_LIBS} yaml-cpp)
+# target_link_libraries(MarchingCubes ${OpenCV_LIBS})
